# poc-event-manager

./: CMakeLists.txt  Dockerfile  IConsumer.h  IManager.h  IPrometheus.h  PipedEvent.h  README.md  app1.cpp  app10.cpp  app11.cpp  app2.cpp  app3.cpp  app4.cpp  app5.cpp  app6.cpp  app7.cpp  app8.cpp  app9.cpp  main.cpp  valgrind.supp
.devcontainer/: devcontainer.json
concurrentqueue/: concurrentqueue.h
inc/: EventPoller.h  IProducer.h  List.h  LockeFreeQueue.h  promethues-simple-server.h
integration/: test_promethues-simple-server.cpp
