cmake_minimum_required(VERSION 3.11)
project(poc-event-manager)
set(CMAKE_CXX_STANDARD 20)

find_package(fmt CONFIG REQUIRED)
find_package(prometheus-cpp CONFIG REQUIRED)

set(app_include_dir ${CMAKE_CURRENT_SOURCE_DIR}/inc)
add_executable(poc-event-manager main.cpp)
target_include_directories(poc-event-manager PRIVATE ${app_include_dir})
target_link_libraries(poc-event-manager fmt::fmt prometheus-cpp::pull)

macro (add_integration_test test_name link_libraries)
    add_executable(test_${test_name} integration/test_${test_name}.cpp)
    target_include_directories(test_${test_name} PRIVATE ${app_include_dir})
    target_link_libraries(test_${test_name} ${link_libraries})
endmacro()
macro (add_app app_name)
    add_executable(app_${app_name} ${app_name}.cpp)
    target_include_directories(app_${app_name} PRIVATE ${app_include_dir})
    target_link_libraries(app_${app_name} ${ARGN})
endmacro()

add_app(app1 fmt::fmt prometheus-cpp::pull)
add_app(app2 fmt::fmt prometheus-cpp::pull)
add_app(app3 fmt::fmt prometheus-cpp::pull)
add_app(app4 fmt::fmt prometheus-cpp::pull)
add_app(app5 fmt::fmt prometheus-cpp::pull)
target_include_directories(app_app5 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/readerwriterqueue/)
add_app(app6 fmt::fmt prometheus-cpp::pull)
add_app(app7 fmt::fmt prometheus-cpp::pull)
add_app(app8 fmt::fmt prometheus-cpp::pull)
add_app(app9 fmt::fmt prometheus-cpp::pull)
target_include_directories(app_app9 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/concurrentqueue/)

add_subdirectory(atomic_queue)
add_app(app10 fmt::fmt prometheus-cpp::pull atomic_queue::atomic_queue)

add_subdirectory(SPSCQueue)
add_app(app11 fmt::fmt prometheus-cpp::pull SPSCQueue::SPSCQueue)

add_integration_test(promethues-simple-server prometheus-cpp::pull)
